--- a/webroot/css/app.css
+++ b/webroot/css/app.css
@@ -12,7 +12,6 @@ body {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  background-image: url("/static/img/header.jpg");
   text-align: center;
   margin: 0px;
   padding: 20px;
@@ -52,7 +51,15 @@ body {
   top: 0px;
   width: 100%;
   height: 100%;
+  padding-right: 240px;
 }
+
+
+.home-container-child {
+  width: 100%;
+  height: 100%;
+}
+
 .home-container .login-container {
   position: absolute;
   border: 1px solid black;
